--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 
     
-    <link rel= "stylesheet" href="../css/bootstrap.min.css">
-    <link rel= "stylesheet" href="../js/jquery-3.6.1.min.js">
-    <link rel= "stylesheet" href="../js/bootstrap.min.js">
-    <link rel= "stylesheet" href= "../css/styles.css"> 
+    <link rel= "stylesheet" href="css/bootstrap.min.css">
+    <link rel= "stylesheet" href="js/jquery-3.6.1.min.js">
+    <link rel= "stylesheet" href="js/bootstrap.min.js">
+    <link rel= "stylesheet" href= "css/styles.css"> 
     <link href= 'https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 </head>
@@ -32,7 +32,7 @@
                         </a>
                         
                         <p>
-                            <img src="../images/star-k-logo.png" alt="Kosher Certification">
+                            <img src="images/star-k-logo.png" alt="Kosher Certification">
                             <span> Kosher Certified </span>
                         </p> 
                     </div>
